Validating the Oplog collection with {background: true} should not cause an invariant

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-09-09
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Because background validation uses intent locks on collections instead of exclusive locks, trying to validate the Oplog collection will cause an invariant when opening a cursor on the Oplog collection here.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: