SERVER-43147 Validating the Oplog collection with {background: true} should not cause an invariant