jstests/noPassthroughWithMongod/validate_oplog_in_background.js
@@ -1,0 +1,13 @@
+/**
+ * Ensures that background validation works on the Oplog.
+ *
+ * @tags: [requires_wiredtiger]
+ */
+(function() {
+'use strict';
+
+let localDb = db.getSiblingDB("local");
+assert.commandWorked(localDb.createCollection("oplog.rs", {capped: true, size: 4096}));
+
+assert.commandWorked(localDb.runCommand({validate: "oplog.rs", background: true}));
+}());
